@@ -6,6 +6,8 @@ Version 0.11.4
 
 Release date to be decided
 
+- Fixed werkzeug.serving not working from -m flag.
+
 Version 0.11.3
 --------------
 
